main and footer not yet

--- a/index.css
+++ b/index.css
@@ -1,3 +1,9 @@
-#navBarDiv{
-    background-color: "black",
-}
+@import url('/css/reset.css');
+@import url('/css/main.css');
+@import url('/css/header.css');
+@import url('/css/footer.css')
+
+
+
+
+
