--- a/css/header.css
+++ b/css/header.css
@@ -1,8 +1,20 @@
+nav{
+    position: fixed;
+    right: 0;
+    left: 0;
+    z-index: 1000;
+}
+
+
+#Form{
+    margin-left: 300px;
+}
+
+
 .flexCon{
     display: flex;
     background-color: #000;
     color: grey;
-    gap: 20em;
 }
 
 ul{
