--- a/css/reset.css
+++ b/css/reset.css
@@ -1,4 +1,27 @@
-*{
-    margin: 0px;
-    padding: 0px;
+body, h1, h2, h3, h4, h5, h6, p, pre,
+dl, dd, ol, ul, figure, hr,
+fieldset, legend, button, input,
+textarea, menu {
+  margin: 0;
+  padding: 0;
 }
+
+button, input, select, textarea {
+    font-family: inherit;
+    font-size: inherit;
+    line-height: inherit;
+  }
+
+  a {
+    text-decoration: none;
+    color: inherit;
+  }
+  
+  html {
+    font-size: 16px;
+  }
+  
+  body {
+    font-family: Arial, sans-serif;
+    line-height: 1.6;
+  }
