--- a/index.css
+++ b/index.css
@@ -1,7 +1,8 @@
 @import url('/css/reset.css');
-@import url('/css/main.css');
+@import url('/css/normalize.css');
 @import url('/css/header.css');
-@import url('/css/footer.css')
+@import url('/css/main.css');
+@import url('/css/footer.css');
 
 
 
