--- a/css/header.css
+++ b/css/header.css
@@ -28,9 +28,11 @@
 
 /* LOGO START */
 #logo{
+    padding-top: 10px;
     height: 100%;
     display: flex;
-    flex-direction: column;
+    flex-direction:row;
+    flex-wrap: nowrap;
     justify-content: center;
     position: relative;
     font-size: 20px;
@@ -39,12 +41,14 @@
 }
 
 #logo:hover{
+    padding-top: 10px;
     height: 100%;
     display: flex;
-    flex-direction: column;
+    flex-wrap: nowrap;
+    flex-direction:row;
     justify-content: center;
     position: relative;
-    font-size: 20px;    
+    font-size: 20px;
     margin-left: auto;
     color: white;
     filter:contrast(100%);
@@ -229,15 +233,19 @@
     }
 
     #logo{
+        padding-top: 10px;
         height: 100%;
         display: flex;
-        flex-direction: column;
+        flex-direction: row;
+        flex-wrap: nowrap;
         justify-content: center;
         position: relative;
         font-size: 20px;
         filter: grayscale(100%);
         margin-left: 1em;
     }
+
+
 
     #logo:hover{
         height: 100%;
